lab1/Test/L1-A-10-34.output
Error Type A at Line 6
Error Type B at Line 14
Error Type A at Line 16
Error Type A at Line 31
Error Type B at Line 32
Error Type A at Line 50
Error Type A at Line 61
