lab1/Test/L1-A-10-34.cmm
struct {
  int yP8D ;
  int ZZ ;
}iQFuMme ( int Po4Ioz6Q9dpgSR , struct Mcg EITGZpBPl 
  ) {
  float Qqw54lMG_x4rcM , lPqeq '= EFLzcmfgmqd = jtzAC_TAwcMP0mVB 
    * B1kDJR [ v8nvxha7q4H4W8RQ = joK4Mom0OS1FOIkGcn || 
    LyFUf0tE0QRZvORNAj8X && YzCVAG > K - - ! yKe1 ( bYBsbhaBXOrzylesx 
    && U_DiqjD_oH8X1fyHqw9 != Cd0 + WvnnCA1SH2tOb9w / 
    ( VcPw1CL0jKo5RSo = e >= FqP2 - hYp57SDHV / oNX0QZVk 
    ( sEW , D0OJsKt8lf0b || QJNaEBHTE <= IvHwVcXQEEtTXNUs 
    == 578680211.173067578 ) < 2129714503 + AdqooOPxQ0N5xKom69 
    - ! n3 ( ) ) ) ] . EUy ;
;}
struct BXNDwSDC {
}c9gkD6ZPasjWe_ou0DWb [ 1188470834 ] , 'fCkmuGCv 

;
int ;
int ;
int ;
int n9HSDfYYLwnSwM5tuWi ( ) {
}
int FQqnKPbPB9UJaJruT ( ) {
  if ( BGrPoH )   lCeISHgWwzI1 ;

}
int ;
int kg_mUFAhu3iF ( ) {
}
int JBapgKje2oAQB ( ) \{
  if == ( xzqpVtxq )   XgozZDAzvdLV2Pu1Z ;
else   while ( GrfzERcx4 )   oBdkXQ0rTV ;


  if ( B )   while ( UB )   nNQwUl6E2x5hnRStv ;

else {
  }
  while ( TtSeIlitng )   return LSMSd6kotufkB ;

}
int ;
int ;
int ;
int ;
int ;
int ;
int NwSGCfyBL ( ) {
}:
int ;
int lyAT ( ) {
}
int UCTWfHTGELIia0a7y ( ) {
}
int ;
int ;
int kLk4nVO1g2_FNPM0 ( ) {
  SgR0qhYIp ;
  if ( nFm7FNIdACr )   HXkSD2Wyy ;
else   if ( LTY_9ZZ4wjjDoruna7Pf ) '  q ;


}
int ;
int N9RPR8IboknSMa ( ) {
}
int ;
